--- a/scripts/build.xml
+++ b/scripts/build.xml
@@ -1,6 +1,6 @@
 <!-- Ant build.xml file for JMRI development -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004 -->
-<!-- Revision $Revision: 1.60 $ -->
+<!-- Revision $Revision: 1.61 $ -->
 
 <project name="JMRI" default="compile" basedir=".">
 <!-- basedir="." means all paths are relative to the "java" subdir -->
@@ -19,7 +19,7 @@
   <property name="test" value="test"/>
   <property name="target" value="classes"/>
   <property name="jartarget" value=".."/>
-
+  
   <path id="project.class.path">
     <pathelement location="../lib/collections.jar" />
     <pathelement location="../lib/crimson.jar" />
@@ -110,6 +110,7 @@
        <!-- <jvmarg value="-Xmx60m"/> -->
        <!-- <jvmarg value="-verbose"/> -->
        <!-- <jvmarg value="-verbosegc"/> -->
+       <!-- <jvmarg value="-Xloggc:memory.vgc"/> --> <!-- for JTune -->
     </java>
  </target>
 
