--- a/jmri/jmrix/loconet/LocoNetBundle.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle.properties
 #
-# Revision $Revision: 1.7 $
+# Revision $Revision: 1.8 $
 #
 # Default properties for the jmri.jmrix.loconet menu
 
@@ -18,5 +18,5 @@ MenuItemThrottleMessages    = Throttle Messages
 MenuItemClockMon            = Clock Monitor
 MenuItemStartLocoNetServer  = Start LocoNet Server
 MenuItemLocoBufferStats     = LocoBuffer Stats Monitor
-MenuItemCmdStnConfig        = Command Station Options Programmer
+MenuItemCmdStnConfig        = Command Station Programmer
 MenuItemDownload            = Download Board
