--- a/jmri/jmrix/loconet/cmdstnconfig/DCS200options.properties
+++ b/jmri/jmrix/loconet/cmdstnconfig/DCS200options.properties
@@ -1,1 +1,68 @@
-# DCS200options.properties## Revision $Revision: 1.1 $## Default command station options for the DCS200# Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1CONFIG_SLOT = 127MIN_OPTION = 1# MAX_OPTION-MIN_OPTION+1 must be a multiple of 8MAX_OPTION = 49LabelTop = DCS200 ProgrammerLabelC = CLabelT = TButtonRead = ReadButtonWrite = WriteOption1 = 1: ReservedOption2 = 2: ReservedOption3 = 3: Booster is autoreversingOption4 = 4: ReservedOption5 = 5: Command station master modeOption6 = 6: ReservedOption7 = 7: ReservedOption8 = 8: ReservedOption9 = 9: Allow Motorola trinary echo for 1-256Option10 = 10: Expand trinary switch echoOption11 = 11: Make certain trinary switches long durationOption12 = 12: Trinary addresses 1-80 allowedOption13 = 13: Raise loco address purge time to 600 secondsOption14 = 14: Disable loco address purgingOption15 = 15: Purge will force a loco to zero speedOption16 = 16: ReservedOption17 = 17: Automatic advanced consists are disabledOption18 = 18: Extend booster short shutdown to 1/2 secondOption19 = 19: ReservedOption20 = 20: Disable address 0 analog operationOption21 = 21: Global default for new loco: FXOption22 = 22: Global default for new loco: 28 stepOption23 = 23: Global default for new loco: 14 stepOption24 = 24: ReservedOption25 = 25: Disable aliasiingOption26 = 26: Enable routesOption27 = 27: Disable normal switch commands (Bushby bit)Option28 = 28: Disable DS54 interrogate at power onOption29 = 29: ReservedOption30 = 30: ReservedOption31 = 31: Meter route/switch output when not in trinaryOption32 = 32: ReservedOption33 = 33: Restore track power to prior state at power onOption34 = 34: Allow track to power up to run stateOption35 = 35: ReservedOption36 = 36: Clear all mobile decoder info and consistsOption37 = 37: Clear all routesOption38 = 38: Clear the loco rosterOption39 = 39: Clear all internal memoryOption40 = 40: ReservedOption41 = 41: Diagnostic click when LocoNet command receivedOption42 = 42: Disable 3 beeps when loco address purgedOption43 = 43: Disable LocoNet update of track statusOption44 = 44: Expand slots to 120Option45 = 45: Disable reply for switch state requestOption46 = 46: ReservedOption47 = 47: Program track is brake generatorOption48 = 48: ReservedOption49 = 49: Reserved
+# DCS200options.properties
+#
+# Revision $Revision: 1.2 $
+#
+# Default command station options for the DCS200
+
+# Generally, CONFIG_SLOT is 127 and MIN_OPTION is 1
+CONFIG_SLOT = 127
+MIN_OPTION = 1
+
+# MAX_OPTION-MIN_OPTION+1 must be a multiple of 8
+MAX_OPTION = 49
+
+LabelTop = DCS200 Programmer
+LabelC = C
+LabelT = T
+ButtonRead = Read
+ButtonWrite = Write
+
+Option1 = 1: Reserved
+Option2 = 2: Reserved
+Option3 = 3: Booster is autoreversing
+Option4 = 4: Reserved
+Option5 = 5: Command station master mode
+Option6 = 6: Reserved
+Option7 = 7: Reserved
+Option8 = 8: Reserved
+Option9 = 9: Allow Motorola trinary echo for 1-256
+Option10 = 10: Expand trinary switch echo
+Option11 = 11: Make certain trinary switches long duration
+Option12 = 12: Trinary addresses 1-80 allowed
+Option13 = 13: Raise loco address purge time to 600 seconds
+Option14 = 14: Disable loco address purging
+Option15 = 15: Purge will force a loco to zero speed
+Option16 = 16: Reserved
+Option17 = 17: Automatic advanced consists are disabled
+Option18 = 18: Extend booster short shutdown to 1/2 second
+Option19 = 19: Reserved
+Option20 = 20: Disable address 0 analog operation
+Option21 = 21: Global default for new loco: FX
+Option22 = 22: Global default for new loco: 28 step
+Option23 = 23: Global default for new loco: 14 step
+Option24 = 24: Reserved
+Option25 = 25: Disable aliasiing
+Option26 = 26: Enable routes
+Option27 = 27: Disable normal switch commands (Bushby bit)
+Option28 = 28: Disable DS54 interrogate at power on
+Option29 = 29: Reserved
+Option30 = 30: Reserved
+Option31 = 31: Meter route/switch output when not in trinary
+Option32 = 32: Reserved
+Option33 = 33: Restore track power to prior state at power on
+Option34 = 34: Allow track to power up to run state
+Option35 = 35: Reserved
+Option36 = 36: Clear all mobile decoder info and consists
+Option37 = 37: Clear all routes
+Option38 = 38: Clear the loco roster
+Option39 = 39: Clear all internal memory
+Option40 = 40: Reserved
+Option41 = 41: Diagnostic click when LocoNet command received
+Option42 = 42: Disable 3 beeps when loco address purged
+Option43 = 43: Disable LocoNet update of track status
+Option44 = 44: Expand slots to 120
+Option45 = 45: Disable reply for switch state request
+Option46 = 46: Reserved
+Option47 = 47: Program track is brake generator
+Option48 = 48: Reserved
+Option49 = 49: Reserved
