--- a/jmri/jmrix/loconet/cmdstnconfig/DB150options.properties
+++ b/jmri/jmrix/loconet/cmdstnconfig/DB150options.properties
@@ -1,6 +1,6 @@
 # DB150options.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default command station options for the DB150 (Empire Builder)
 
@@ -16,23 +16,15 @@ LabelC = C
 LabelT = T
 ButtonRead = Read
 ButtonWrite = Write
+CheckBoxReserved = Show reserved option switches
+Reserved = Reserved
 
-Option1 = 1: Reserved
 Option2 = 2: Booster only override
 Option3 = 3: Booster is autoreversing
-Option4 = 4: Reserved
 Option5 = 5: Command station master mode
-Option6 = 6: Reserved
-Option7 = 7: Reserved
-Option8 = 8: Reserved
-Option9 = 9: Reserved
-Option10 = 10: Reserved
-Option11 = 11: Reserved
-Option12 = 12: Reserved
 Option13 = 13: Raise loco address purge time to 600 seconds
 Option14 = 14: Disable loco address purging
 Option15 = 15: Purge will force a loco to zero speed
-Option16 = 16: Reserved
 Option17 = 17: Automatic advanced consists are disabled
 Option18 = 18: Extend booster short shutdown to 1/2 second
 Option19 = 19: Reserved
@@ -40,38 +32,17 @@ Option20 = 20: Disable address 0 analog operation
 Option21 = 21: Global default for new loco: FX
 Option22 = 22: Global default for new loco: 28 step
 Option23 = 23: Global default for new loco: 14 step
-Option24 = 24: Reserved
-Option25 = 25: Reserved (must be closed)
-Option26 = 26: Reserved
 Option27 = 27: Disable normal switch commands (Bushby bit)
 Option28 = 28: Disable DS54 interrogate at power on
-Option29 = 29: Reserved
-Option30 = 30: Reserved
-Option31 = 31: Reserved
-Option32 = 32: Reserved
 Option33 = 33: Restore track power to prior state at power on
 Option34 = 34: Allow track to power up to run state
-Option35 = 35: Reserved
 Option36 = 36: Clear all mobile decoder info and consists
-Option37 = 37: Reserved
 Option38 = 38: Clear the loco roster
 Option39 = 39: Clear all internal memory
-Option40 = 40: Reserved
 Option41 = 41: Diagnostic click when LocoNet command received
 Option42 = 42: Disable 3 beeps when loco address purged
 Option43 = 43: Disable LocoNet update of track status
-Option44 = 44: Reserved
-Option45 = 45: Reserved
-Option46 = 46: Reserved
-Option47 = 47: Reserved
-Option48 = 48: Reserved
-Option49 = 49: Reserved
 Option50 = 50: Longer booster short circuit recovery time
 Option51 = 51: Do not allow EXT voltage RESTART
-Option52 = 52: Reserved
-Option53 = 53: Reserved
-Option54 = 54: Reserved
-Option55 = 55: Reserved
-Option56 = 56: Reserved
-Option57 = 57: Reserved
+
 
