Add Print and Print Preview capability to Turnout, Sensor, Light, Signal, Reporter, Memory and Route tables

--- a/apps/AppsBundle.properties
+++ b/apps/AppsBundle.properties
@@ -1,6 +1,6 @@
 # AppsBundle.properties
 #
-# Revision $Revision: 1.7 $
+# Revision $Revision: 1.8 $
 #
 # Default properties for the apps package of jmri.
 
@@ -19,6 +19,9 @@ MenuTools    = Tools
 MenuRoster   = Roster
 
 ButtonQuit = Quit
+
+PrintTable	= Print Table
+PreviewTable	= Print Preview Table
 
 # general messages
 MsgOpsButtonDisabled = This button is disabled because your command station can't do \
