loconet id option

--- a/jmri/jmrix/loconet/LocoNetBundle.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle.properties
 #
-# Revision $Revision: 1.8 $
+# Revision $Revision: 1.9 $
 #
 # Default properties for the jmri.jmrix.loconet menu
 
@@ -20,3 +20,4 @@ MenuItemStartLocoNetServer  = Start LocoNet Server
 MenuItemLocoBufferStats     = LocoBuffer Stats Monitor
 MenuItemCmdStnConfig        = Command Station Programmer
 MenuItemDownload            = Download Board
+MenuItemSetID               = Set LocoNet ID
