add new header text following suggestion by Dick Bronson

--- a/jmri/jmrix/loconet/cmdstnconfig/DB150options.properties
+++ b/jmri/jmrix/loconet/cmdstnconfig/DB150options.properties
@@ -1,6 +1,6 @@
 # DB150options.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default command station options for the DB150 (Empire Builder)
 
@@ -18,6 +18,8 @@ ButtonRead = Read
 ButtonWrite = Write
 CheckBoxReserved = Show reserved option switches
 Reserved = Reserved
+
+HeadingText = Items describe effect on system operation when set "closed"
 
 Option2 = 2: Booster only override
 Option3 = 3: Booster is autoreversing
