--- a/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions.properties
+++ b/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions.properties
@@ -1,6 +1,6 @@
 # Defaultoptions.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default command station options for when the command
 # station isn't recognized.  These are the same as the Chief (DCS100)
@@ -19,6 +19,8 @@ ButtonRead = Read
 ButtonWrite = Write
 CheckBoxReserved = Show reserved option switches
 Reserved = Reserved
+
+HeadingText = Items describe effect on system operation when set "closed"
 
 Option3 = 3: Booster is autoreversing
 Option5 = 5: Command station master mode
