--- a/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions.properties
+++ b/jmri/jmrix/loconet/cmdstnconfig/Intelliboxoptions.properties
@@ -1,6 +1,6 @@
 # Intelliboxoptions.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default command station options for the Intellibox.
 # These were actually taken from the DCS100, and it's
@@ -20,6 +20,8 @@ ButtonRead = Read
 ButtonWrite = Write
 CheckBoxReserved = Show reserved option switches
 Reserved = Reserved
+
+HeadingText = Items describe effect on system operation when set "closed"
 
 Option3 = 3: Booster is autoreversing
 Option5 = 5: Command station master mode
