--- a/jmri/jmrix/loconet/cmdstnconfig/DCS100options.properties
+++ b/jmri/jmrix/loconet/cmdstnconfig/DCS100options.properties
@@ -1,6 +1,6 @@
 # DCS100options.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default command station options for the DCS100 (Chief)
 
@@ -18,6 +18,8 @@ ButtonRead = Read
 ButtonWrite = Write
 CheckBoxReserved = Show reserved option switches
 Reserved = Reserved
+
+HeadingText = Items describe effect on system operation when set "closed"
 
 Option3 = 3: Booster is autoreversing
 Option5 = 5: Command station master mode
