--- a/jmri/jmrix/loconet/cmdstnconfig/DCS50options.properties
+++ b/jmri/jmrix/loconet/cmdstnconfig/DCS50options.properties
@@ -1,6 +1,6 @@
 # DCS50options.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default command station options for the DCS50 (Zephyr)
 
@@ -18,6 +18,8 @@ ButtonRead = Read
 ButtonWrite = Write
 CheckBoxReserved = Show reserved option switches
 Reserved = Reserved
+
+HeadingText = Items describe effect on system operation when set "closed"
 
 Option1 = 1: One jump port (normally two)
 Option2 = 2: Booster/Throttle, not command station
