added LocoNetOverTCP Server Capability

--- a/jmri/jmrix/loconet/LocoNetBundle.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle.properties
 #
-# Revision $Revision: 1.9 $
+# Revision $Revision: 1.10 $
 #
 # Default properties for the jmri.jmrix.loconet menu
 
@@ -17,6 +17,7 @@ MenuItemDS64Programmer      = DS64 Programmer
 MenuItemThrottleMessages    = Throttle Messages
 MenuItemClockMon            = Clock Monitor
 MenuItemStartLocoNetServer  = Start LocoNet Server
+MenuItemLocoNetOverTCPServer = LocoNetOverTCP Server
 MenuItemLocoBufferStats     = LocoBuffer Stats Monitor
 MenuItemCmdStnConfig        = Command Station Programmer
 MenuItemDownload            = Download Board
