new system names

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.8 $
+# Revision $Revision: 1.9 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -21,6 +21,8 @@ MenuItemXPressNet = XPressNet
 MenuItemXPA = XPA
 MenuItemZimo = Zimo
 MenuItemDirect = DirectDrive
+MenuItemTMCC = TMCC (Lionel)
+MenuItemOakTree = Oak Tree
 
 MenuItemCommandMonitor = Command Monitor
 MenuItemSendCommand = Send Command
