--- a/jmri/jmrix/loconet/cmdstnconfig/DCS50options.properties
+++ b/jmri/jmrix/loconet/cmdstnconfig/DCS50options.properties
@@ -1,6 +1,6 @@
 # DCS50options.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 #
 # Default command station options for the DCS50 (Zephyr)
 
@@ -26,6 +26,7 @@ Option2 = 2: Booster/Throttle, not command station
 Option3 = 3: Booster is autoreversing
 Option5 = 5: No change allowed for throttle ID, Vmax or brake rate
 Option6 = 6: Function 3 is non-latching
+Option7 = 7: Blast-mode programming for sound decoders
 Option13 = 13: Raise loco address purge time to 600 seconds
 Option14 = 14: Disable loco address purging
 Option15 = 15: Purge will force a loco to zero speed
