--- a/jmri/jmrix/cmri/CMRIBundle.properties
+++ b/jmri/jmrix/cmri/CMRIBundle.properties
@@ -1,6 +1,6 @@
 # CMRIBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrix.cmri menu
 
@@ -9,3 +9,4 @@ MenuCMRI    = CMRI
 MenuItemCommandMonitor      = CMRI Monitor
 MenuItemSendCommand         = Send Command
 MenuItemDiagnostics         = Run Diagnostic
+MenuItemAssignments         = List Assignments
