added developer and 16 bit product code to harmonize IPL and SV protocols

--- a/jmri/jmrix/loconet/downloader/File.properties
+++ b/jmri/jmrix/loconet/downloader/File.properties
@@ -1,6 +1,6 @@
 # loconet/downloader/File.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 # Copyright 2005 Bob Jacobsen
 #
 # Properties defining constants used for the LocoNet
@@ -10,6 +10,7 @@
 
 StringLoader        = Bootloader Version:
 StringManufacturer  = Manufacturer Code:
+StringDeveloper     = Developer Code:
 StringProduct       = Product Code:
 StringHardware      = Hardware Version:
 StringSoftware      = Software Version:
