--- a/jmri/jmrix/loconet/downloader/Loader.properties
+++ b/jmri/jmrix/loconet/downloader/Loader.properties
@@ -1,6 +1,6 @@
 # Loader.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 # Copyright 2005 Bob Jacobsen
 #
 #
@@ -20,11 +20,12 @@ LabelInpFile = Input file:
 LabelBootload = Bootloader Version Number:
 
 LabelMfg = Manufacturer Number:
+LabelDev = Developer Number:
 LabelProduct = Product Code:
 LabelHardware = Hardware Version Number:
-LabelSoftware = Software Version Number: 
-LabelDelay = Delay (msec): 
-LabelEEStart = Start of EEPROM addresses (hex): 
+LabelSoftware = Software Version Number:
+LabelDelay = Delay (msec):
+LabelEEStart = Start of EEPROM addresses (hex):
 
 StatusSelectFile    = Click Select to pick the firmware file
 StatusReadFile      = Click Read to read the firmware file
