add PR2, some reordering

--- a/jmri/jmrix/loconet/LocoNetBundle.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle.properties
 #
-# Revision $Revision: 1.10 $
+# Revision $Revision: 1.11 $
 #
 # Default properties for the jmri.jmrix.loconet menu
 
@@ -21,4 +21,5 @@ MenuItemLocoNetOverTCPServer = LocoNetOverTCP Server
 MenuItemLocoBufferStats     = LocoBuffer Stats Monitor
 MenuItemCmdStnConfig        = Command Station Programmer
 MenuItemDownload            = Download Board
+MenuItemSoundload            = Download Sounds
 MenuItemSetID               = Set LocoNet ID
