better option name for download

--- a/jmri/jmrix/loconet/LocoNetBundle.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle.properties
 #
-# Revision $Revision: 1.11 $
+# Revision $Revision: 1.12 $
 #
 # Default properties for the jmri.jmrix.loconet menu
 
@@ -20,6 +20,6 @@ MenuItemStartLocoNetServer  = Start LocoNet Server
 MenuItemLocoNetOverTCPServer = LocoNetOverTCP Server
 MenuItemLocoBufferStats     = LocoBuffer Stats Monitor
 MenuItemCmdStnConfig        = Command Station Programmer
-MenuItemDownload            = Download Board
-MenuItemSoundload            = Download Sounds
+MenuItemDownload            = Download Firmware
+MenuItemSoundload           = Download Sounds
 MenuItemSetID               = Set LocoNet ID
