clean up formatting, add title

--- a/jmri/jmrix/loconet/soundloader/Loader.properties
+++ b/jmri/jmrix/loconet/soundloader/Loader.properties
@@ -1,6 +1,6 @@
 # Loader.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 # Copyright 2005, 2006 Bob Jacobsen
 #
 #
@@ -10,15 +10,16 @@
 TitleLoader = Decoder Sound Downloader
 
 ButtonSelect = Select
-LabelInpFile = Input file:
+LabelInpFile = Input file: 
 
+LabelFileComment = File label: 
 
 ButtonRead = Read file
 ButtonLoad = Download
 
-StatusSelectFile    = Click Select to pick the firmware file
-StatusReadFile      = Click Read to read the firmware file
-StatusDoDownload    = Click Download to download new firmware
+StatusSelectFile    = Click "Select" and pick a .spj file
+StatusReadFile      = Click "Read" to read the file
+StatusDoDownload    = Click "Download" to start transfer
 StatusDownloading   = Downloading!
 StatusDone          = Operation Complete
 
@@ -26,17 +27,10 @@ TipReadDisabled = Button disabled until you select an input file name
 TipReadEnabled = Click here to read the data file
 
 TipLoadDisabled = Button disabled until you read a data file
-TipLoadEnabled = Click here to download to the product
+TipLoadEnabled = Click here to download to the decoder
 
 
 TipDisabledDownload = Button disabled during download
-
-ButtonCheckHardwareNo       = Don't check hardware version
-ButtonCheckHardwareExact    = Require hardware version exact match
-ButtonCheckHardwareGreater  = Accept later hardware versions
-
-ButtonCheckSoftwareNo       = Don't check software version
-ButtonCheckSoftwareLess     = Only overwrite earlier software versions
 
 ErrorTitle = Error
 
