better frame title

--- a/jmri/jmrix/loconet/downloader/Loader.properties
+++ b/jmri/jmrix/loconet/downloader/Loader.properties
@@ -1,13 +1,13 @@
 # Loader.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 # Copyright 2005 Bob Jacobsen
 #
 #
 # Default properties for the jmri.jmrix.loconet.downloader GUI elements
 
 
-TitleLoader = Hex File Downloader
+TitleLoader = Firmware Downloader
 
 ButtonSelect = Select
 
