add status/error messages for LoaderEngine

--- a/jmri/jmrix/loconet/soundloader/Loader.properties
+++ b/jmri/jmrix/loconet/soundloader/Loader.properties
@@ -1,11 +1,13 @@
 # Loader.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 # Copyright 2005, 2006 Bob Jacobsen
 #
 #
 # Default properties for the jmri.jmrix.loconet.soundloader GUI elements
 
+
+# Group for the LoaderPane GUI
 
 TitleLoader = Decoder Sound Downloader
 
@@ -38,3 +40,11 @@ ErrorNoInputFile = You must have selected an input file first
 ErrorFileNotFound = File not found
 ErrorIOError = IO Error, see log window
 
+# Group of status and error messages for the LoaderEngine
+EngineEraseFlash = Starting download; erase flash
+EngineDone = Done
+EngineSendSdf = Send SDF data
+EngineSendWav = Send WAV data
+EngineSendWavBlock = Send WAV data block {0}
+
+EngineAbortDelay = Download aborted; PR2 not ready
