--- a/scripts/build.xml
+++ b/scripts/build.xml
@@ -1,6 +1,6 @@
 <!-- Ant build.xml file for JMRI development -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004 -->
-<!-- Revision $Revision: 1.61 $ -->
+<!-- Revision $Revision: 1.62 $ -->
 
 <project name="JMRI" default="compile" basedir=".">
 <!-- basedir="." means all paths are relative to the "java" subdir -->
@@ -64,7 +64,8 @@
   <target name="compile" depends="init, copyfiles" description="compile source, omitting tests">
     <!-- Compile the java code from ${source} into ${target} -->
     <javac srcdir="${source}" 
-           destdir="${target}" 
+           destdir="${target}"
+           source="1.3" 
            target="1.3" 
            debug="no" >
        <classpath refid="project.class.path"    />
@@ -75,6 +76,7 @@
     <!-- Compile the java code from ${source} into ${target} -->
     <javac srcdir="${source}" 
            destdir="${target}" 
+           source="1.3"
            target="1.3" 
            debug="yes" >
        <classpath refid="project.class.path"    />
@@ -93,6 +95,7 @@
     <!-- Compile the test java code from ${source} into ${target} -->
     <javac srcdir="${test}" 
            destdir="${target}"
+           source="1.3"
            target="1.3" 
            debug="yes" >
        <classpath refid="project.class.path"    />
