--- a/xml/XSLT/build.xml
+++ b/xml/XSLT/build.xml
@@ -1,6 +1,6 @@
 <!-- an ANT build.xml file for JMRI XSLT -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004, 2005 -->
-<!-- Revision $Revision: 1.11 $ -->
+<!-- Revision $Revision: 1.12 $ -->
 
 <project name="JMRI" default="xslt" basedir=".">
 <!-- basedir="." means all paths are relative to the "java" subdir -->
@@ -104,13 +104,13 @@
     		out="pages/decoderpower.csv"
     	>
 	</style>
-    <style  basedir="${target}"
-    		destdir="${target}"
-    		style="CSVsummary.xsl"
-    		in="pages/decoderIndex.xml"
-    		out="pages/cvsummary.csv"
-    	>
-	</style>
+<!--    <style  basedir="${target}"   -->
+<!--    		destdir="${target}"    -->
+<!--    		style="CSVsummary.xsl"    -->
+<!--    		in="pages/decoderIndex.xml"   -->
+<!--    		out="pages/cvsummary.csv"    -->
+<!--    	>       -->
+<!--	</style>    -->
   </target>
   
   <target name="index" depends="init, copyDTD, copyXML" 
@@ -181,7 +181,7 @@
 	</style>
   </target>
   
-  <target name="xslt" depends="init, models, index, selection, csv, id, cvsummary"
+  <target name="xslt" depends="init, models, index, selection, csv, id"
   		description="run the whole sequence of processing" />
   		
   <target name="upload" description="Upload existing results to web site" >
