fix stats name; not just for LocoBuffer

--- a/jmri/jmrix/loconet/LocoNetBundle.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle.properties
@@ -1,6 +1,6 @@
 # LocoNetBundle.properties
 #
-# Revision $Revision: 1.12 $
+# Revision $Revision: 1.13 $
 #
 # Default properties for the jmri.jmrix.loconet menu
 
@@ -18,8 +18,9 @@ MenuItemThrottleMessages    = Throttle Messages
 MenuItemClockMon            = Clock Monitor
 MenuItemStartLocoNetServer  = Start LocoNet Server
 MenuItemLocoNetOverTCPServer = LocoNetOverTCP Server
-MenuItemLocoBufferStats     = LocoBuffer Stats Monitor
+MenuItemLocoBufferStats     = LocoNet Stats Monitor
 MenuItemCmdStnConfig        = Command Station Programmer
 MenuItemDownload            = Download Firmware
 MenuItemSoundload           = Download Sounds
+MenuItemSoundEditor         = Edit SPJ Sound File
 MenuItemSetID               = Set LocoNet ID
