add three more actions for threads, scripts

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -38,6 +38,9 @@ jmri.jmrit.simpleclock.SimpleClockAction = 			Open Fast Clock Configuration
 # Panels menu
 jmri.jmrit.display.PanelEditorAction =              New Panel
 jmri.configurexml.LoadXmlConfigAction =             Load Panel
+jmri.jmrit.automat.monitor.AutomatTableAction =     Open Thread Monitor
+jmri.jmrit.jython.JythonWindow =               Open Script Output Window
+jmri.jmrit.jython.InputWindowAction =               Open Script Entry Window
 
 # selected items from systems menus
 jmri.jmrix.cmri.serial.serialmon.SerialMonAction =  Open C/MRI Monitor
