Provide text that indicates which turnout state (Thrown/Closed) corresponds to the buttons used on an LH100.

--- a/jmri/jmrix/lenz/XNetBundle.properties
+++ b/jmri/jmrix/lenz/XNetBundle.properties
@@ -1,6 +1,6 @@
 # XNetBundle.properties
 #
-# Revision $Revision: 2.2 $
+# Revision $Revision: 2.3 $
 #
 # Default properties for the jmri.jmrix.xpressnet menu
 
@@ -14,4 +14,8 @@ MenuItemLZ100ConfigurationManager  = LZ100 Configuration Manager
 MenuItemLZV100ConfigurationManager  = LZV100 Configuration Manager
 MenuItemLV102ConfigurationManager  = LV102 Configuration Manager
 MenuItemXNetSystemInformation  = XPressNet System Information
+
+#Turnout Text
+TurnoutStateClosed = "Closed (-)"
+TurnoutStateThrown = "Thrown (+)"
 
