new MRC system name

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.9 $
+# Revision $Revision: 1.10 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -23,6 +23,7 @@ MenuItemZimo = Zimo
 MenuItemDirect = DirectDrive
 MenuItemTMCC = TMCC (Lionel)
 MenuItemOakTree = Oak Tree
+MenuItemMRC = Model Rectifier Corp (MRC)
 
 MenuItemCommandMonitor = Command Monitor
 MenuItemSendCommand = Send Command
