--- a/scripts/build.xml
+++ b/scripts/build.xml
@@ -1,6 +1,6 @@
 <!-- Ant build.xml file for JMRI development -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004 -->
-<!-- Revision $Revision: 1.62 $ -->
+<!-- Revision $Revision: 1.63 $ -->
 
 <project name="JMRI" default="compile" basedir=".">
 <!-- basedir="." means all paths are relative to the "java" subdir -->
@@ -154,6 +154,17 @@
        <classpath refid="project.class.path"    />
        <sysproperty key="java.security.policy" value="lib/security.policy"/> 
        <sysproperty key="apple.laf.useScreenMenuBar" value="true"/> 
+    </java>
+ </target>
+
+  <target name="local" depends="compile" description="build and run decoderpro from local config file">
+    <java classname="apps.DecoderPro.DecoderPro"
+          dir=".." 
+	  fork="yes" >
+       <classpath refid="project.class.path"    />
+       <sysproperty key="java.security.policy" value="lib/security.policy"/> 
+       <sysproperty key="apple.laf.useScreenMenuBar" value="true"/> 
+       <arg line="/Users/jake/Documents/Trains/JMRI/projects/HEAD/ConfigLocal.xml"/>
     </java>
  </target>
 
