Add enable and edit columns to Light Table

--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.16 $
+# Revision $Revision: 1.17 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
@@ -28,6 +28,7 @@ TitleAddMemory = Add New Memory
 TitleAddLight = Add/Edit Light
 LabelSystemName = System Name:
 LabelUserName   = User Name:
+ColumnHeadEnabled = Enabled
 
 StringSE8c4aspect  = SE8c 4 aspect
 StringTripleTurnout = Triple Turnout
