improve terminology for programmers

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.5 $
+# Revision $Revision: 1.6 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -15,7 +15,7 @@ jmri.jmrix.loconet.locormi.LnMessageServerAction =  Start LocoNet Server
 # this next group is the Tools menu
 jmri.jmrit.simpleprog.SimpleProgAction =            Open Single CV Programmer
 jmri.jmrit.symbolicprog.tabbedframe.PaneProgAction= Open DecoderPro Service Mode
-jmri.jmrit.symbolicprog.tabbedframe.PaneOpsProgAction= Open DecoderPro Ops Mode
+jmri.jmrit.symbolicprog.tabbedframe.PaneOpsProgAction= Open DecoderPro Operations Mode
 
 jmri.jmrit.powerpanel.PowerPanelAction =            Open Power Control
 jmri.jmrit.speedometer.SpeedometerAction =          Open Speedometer
