--- a/apps/AppsBundle.properties
+++ b/apps/AppsBundle.properties
@@ -1,6 +1,6 @@
 # AppsBundle.properties
 #
-# Revision $Revision: 1.8 $
+# Revision $Revision: 1.9 $
 #
 # Default properties for the apps package of jmri.
 
@@ -25,19 +25,15 @@ PreviewTable	= Print Preview Table
 
 # general messages
 MsgOpsButtonDisabled = This button is disabled because your command station can't do \
-                            ops mode programming, or we don't yet have code to do \
+                            operations mode programming, or we don't yet have code to do \
                             it for that type of system
 MsgServiceButtonDisabled = This button is disabled because your command station can't do \
                             service mode programming, or we don't yet have code to do \
                             it for that type of system
 
-# DecoderPro menus
-DpMenuItemUseProgrammingTrack = Use programming track ...
-DpMenuItemProgramOnMainTrack  = Program on main track ...
-
 # DecoderPro buttons
-DpButtonUseProgrammingTrack = Use programming track ...
-DpButtonProgramOnMainTrack  = Program on main track ...
+DpButtonUseProgrammingTrack = Service Mode (Programming Track) Programmer
+DpButtonProgramOnMainTrack  = Operations Mode (Main Track) Programmer
 
 # credit screen
 DefaultVersionCredit = JMRI version {0}
