--- a/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
+++ b/jmri/jmrit/symbolicprog/SymbolicProgBundle.properties
@@ -1,7 +1,7 @@
 #
 # jmri.jmrit.symbolicprog.SymbolicProgBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Copyright 2007 Bob Jacobsen, part of JMRI, 
 # see the COPYING file for license info
@@ -93,11 +93,11 @@ MenuExportCSV = CSV file...
 MenuExportPr1DOS = PR1DOS file...
 MenuExportPr1WIN = PR1WIN file...
 
-FrameOpsProgrammerSetup = Ops-mode Programmer Setup
-FrameOpsProgrammerTitle = Program {0} on main track
+FrameOpsProgrammerSetup = Operations Mode (Main Track) Programmer Setup
+FrameOpsProgrammerTitle = Program {0} in Operations Mode (Main Track)
 
-FrameServiceProgrammerSetup = Service-mode Programmer Setup
-FrameServiceProgrammerTitle = Program {0} on service track
+FrameServiceProgrammerSetup = Service Mode (Programming Track) Programmer Setup
+FrameServiceProgrammerTitle = Program {0} in Service Mode (Programming Track)
 
 PromptCloseWindowNotWrittenDecoder = Some changes have not been written to the decoder. They will be lost. Close window?
 PromptCloseWindowNotWrittenConfig = Some changes have not been written to a configuration file. Close window?
