--- a/xml/XSLT/build.xml
+++ b/xml/XSLT/build.xml
@@ -1,6 +1,6 @@
 <!-- an ANT build.xml file for JMRI XSLT -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004, 2005 -->
-<!-- Revision $Revision: 1.12 $ -->
+<!-- Revision $Revision: 1.13 $ -->
 
 <project name="JMRI" default="xslt" basedir=".">
 <!-- basedir="." means all paths are relative to the "java" subdir -->
@@ -120,6 +120,19 @@
     		extension=".html"
     		style="DecoderModelIndex.xsl"
     		includes="decoderIndex.xml"
+    	>
+	</style>
+  </target>
+  
+  <target name="mfgs" depends="init, copyDTD, copyXML" 
+  			description="create a manufacturer index page">
+    <style  basedir="${target}"
+    		destdir="${target}"
+    		extension=".html"
+    		style="DecoderMfgIndex.xsl"
+    		includes="decoderIndex.xml"
+    		in="pages/decoderIndex.xml"
+    		out="pages/mfgIndex.html"
     	>
 	</style>
   </target>
