Change for Logix implementation

--- a/apps/ActionListBundle.properties
+++ b/apps/ActionListBundle.properties
@@ -1,6 +1,6 @@
 # ActionListBundle.properties
 #
-# Revision $Revision: 1.6 $
+# Revision $Revision: 1.7 $
 #
 # Properties listing names for "Action" classes that can appear
 # in various forms in advanced preferences
@@ -27,6 +27,8 @@ jmri.jmrit.beantable.SignalHeadTableAction =        Open Signal Table
 jmri.jmrit.beantable.ReporterTableAction =          Open Reporter Table
 jmri.jmrit.beantable.MemoryTableAction =            Open Memory Table
 jmri.jmrit.beantable.RouteTableAction =             Open Route Table
+jmri.jmrit.beantable.LightTableAction =				Open Light Table
+jmri.jmrit.beantable.LogixTableAction =				Open Logix Table
 jmri.jmrit.blockboss.BlockBossAction =              Open Signal Logic Panel
 
 jmri.jmrit.consisttool.ConsistToolAction =          Open Consisting Tool
