Change for Logix implementation

--- a/jmri/jmrit/JmritToolsBundle.properties
+++ b/jmri/jmrit/JmritToolsBundle.properties
@@ -1,6 +1,6 @@
 # JmritToolsBundle.properties
 #
-# Revision $Revision: 1.14 $
+# Revision $Revision: 1.15 $
 #
 # Default properties for the jmri.jmrit Tools menu
 
@@ -19,6 +19,7 @@ MenuItemReporterTable = Reporter Table
 MenuItemMemoryTable = Memory Table
 MenuItemSimpleSignal = Simple Signal Logic
 MenuItemRouteTable = Route Table
+MenuItemLogixTable = Logix Table
 MenuItemSensorGroup = Sensor Groups...
 
 MenuThrottles = Throttles
