--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.17 $
+# Revision $Revision: 1.18 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
@@ -8,6 +8,7 @@ TitleSensorTable  = Sensor Table
 TitleTurnoutTable = Turnout Table
 TitleSignalTable  = Signal Table
 TitleLightTable = Light Table
+TitleLogixTable = Logix Table
 TitleReporterTable = Reporter Table
 TitleMemoryTable = Memory Table
 
