modifications to Logix to add user names and fix misc. bugs

--- a/jmri/jmrit/beantable/LogixTableBundle.properties
+++ b/jmri/jmrit/beantable/LogixTableBundle.properties
@@ -1,6 +1,6 @@
 # LogixTableBundle.properties
 #
-# Revision $Revision: 1.1 $
+# Revision $Revision: 1.2 $
 #
 # Default properties for the jmri.jmrit.LogixTableAction GUI elements
 
@@ -16,6 +16,7 @@ ConditionalUserName = Conditional User Name
 ConditionalUserNameHint = Enter user name for Conditional, e.g. Signal 2 Red
 
 ColumnLabelSystemName = System Name
+ColumnLabelName = Name
 ColumnLabelUserName = User Name
 ColumnLabelState = State
 ColumnLabelVariableType = Variable Type
@@ -70,13 +71,13 @@ CancelConditionalButtonHint = Press to return to Edit Logix without any changes
 DeleteConditionalButton = Delete Conditional
 DeleteConditionalButtonHint = Press to delete this Conditional and return to Edit Logix
 
-SysNameHintTurnout = Enter system name for turnout to receive this action
-SysNameHintSensor = Enter system name for sensor to receive this action
-SysNameHintSignal = Enter system name for signal to receive this action
-SysNameHintLight = Enter system name for light to receive this action
-SysNameHintRoute = Enter system name of Route to be triggered
-SysNameHintMemory = Enter system name of Memory to be set
-SysNameHintLogix = Enter system name of Logix to receive this action 
+NameHintTurnout = Enter name (system or user) for turnout to receive this action
+NameHintSensor = Enter name (system or user) for sensor to receive this action
+NameHintSignal = Enter name (system or user) for signal to receive this action
+NameHintLight = Enter name (system or user) for light to receive this action
+NameHintRoute = Enter name (system or user) of Route to be triggered
+NameHintMemory = Enter name (system or user) of Memory to be set
+NameHintLogix = Enter name (system or user) of Logix to receive this action 
 TurnoutSetHint = Select Closed or Thrown depending upon how Turnout is to be set
 SensorSetHint = Select Active or Inactive depending upon how Sensor is to be set
 LightSetHint = Select On or Off depending upon how Light is to be set
@@ -100,18 +101,18 @@ Reminder2 = 'Store Configuration...' in File menu of Logix Table.)
 TypeSelectMessage = Select Variable Type, then enter required information
 TypeSensorActive = Sensor Active
 TypeSensorInactive = Sensor Inactive
-TypeSensorMessage = Enter System Name for Sensor (e.g. CS2)
+TypeSensorMessage = Enter Name (system or user) for Sensor (e.g. CS2)
 TypeTurnoutThrown = Turnout Thrown
 TypeTurnoutClosed = Turnout Closed
-TypeTurnoutMessage = Enter System Name for Turnout (e.g. LT12)
+TypeTurnoutMessage = Enter Name (system or user) for Turnout (e.g. LT12)
 TypeConditionalTrue = Conditional True
 TypeConditionalFalse = Conditional False
-TypeConditionalMessage = Enter System Name for Conditional (e.g. IX2C3)
+TypeConditionalMessage = Enter System Name for Conditional (or User Name if in this Logix)
 TypeLightOn = Light On
 TypeLightOff = Light Off
-TypeLightMessage = Enter System Name for Light (e.g. CL21)
+TypeLightMessage = Enter Name (system or user) for Light (e.g. CL21)
 TypeMemoryEquals = Memory Equals
-TypeMemoryMessage = Enter System Name for Memory, and matching Text in Data 1 
+TypeMemoryMessage = Enter Name (system or user) for Memory, and matching Text in Data 1 
 TypeFastClockRange = Fast Clock Range
 TypeClockMessage = Enter beginning time in Data 1, and end time in Data 2 (hh:mm, 24-hour clock)
 TypeSignalHeadRed = Signal Red
@@ -123,7 +124,7 @@ TypeSignalHeadFlashYellow = Signal Flashing Yellow
 TypeSignalHeadFlashGreen = Signal Flashing Green
 TypeSignalHeadLit = Signal Lit
 TypeSignalHeadHeld = Signal Held
-TypeSignalMessage = Enter System Name for Signal Head (e.g. IH34)
+TypeSignalMessage = Enter Name (system or user) for Signal Head (e.g. IH34)
 VariableOKMessage = All state variables are OK.
 VariableErrorMessage = Error found, please correct and try again.
 
@@ -172,7 +173,7 @@ Error8 = Invalid system name, or system name not entered.
 Error9 = Please enter a valid Logix system name (e.g. IX3) and try again.
 Error10 = New user name is already in use. Cannot update this Conditional.
 Error11 = At least two Conditionals are needed to reorder Conditionals.
-Error12 = The system name *
+Error12 = The name *
 Error13 = * does not match an existing turnout.
 Error14 = * does not match an existing signal head.
 Error15 = * does not match an existing sensor.
@@ -189,6 +190,13 @@ Error25 = Unreasonable or missing entry of time to wait for Delayed Set Sensor a
 Error26 = Invalid time entry - 
 Error27 = - Time must be entereded in hh:mm format (e.g. 01:30, 16:00)
 Error28 = for a 24-hour clock. Please reenter in correct format, and try again. 
+Error29 = Please enter a valid conditional system name, or the user name of a conditional in this logix.
+Error30 = Duplicate user name error. Entered user name is already in use by Conditional
+Error31 = Please enter a different user name from others in this table.
+Error32 = Cannot edit two Logixs at the same time. Please complete edit of Logix *
+Error33 = * and try again.
+Error34 = Cannot edit two Conditionals at the same time. Please complete edit of Conditional *
+Error35 = Edit conditional in progress. Please complete edit of Conditional *
 
 WarnTitle = Warning
 Warn1 = The last Conditional has been deleted from this Logix.
