--- a/jmri/jmrit/beantable/LogixTableBundle.properties
+++ b/jmri/jmrit/beantable/LogixTableBundle.properties
@@ -1,6 +1,6 @@
 # LogixTableBundle.properties
 #
-# Revision $Revision: 1.2 $
+# Revision $Revision: 1.3 $
 #
 # Default properties for the jmri.jmrit.LogixTableAction GUI elements
 
@@ -95,8 +95,7 @@ ButtonNext = Next
 ReorderMessage = Please press First, then Next, Next, ... in desired order.
 
 ReminderTitle = Reminder
-Reminder1 = Please remember to save your Logixs to disk.  (Select
-Reminder2 = 'Store Configuration...' in File menu of Logix Table.)
+Reminder1 = Please remember to save your Logixs to disk.  (Select\n'Store Configuration...' in File menu of Logix Table.)
 
 TypeSelectMessage = Select Variable Type, then enter required information
 TypeSensorActive = Sensor Active
@@ -162,46 +161,33 @@ AppearanceFlashYellow = Flashing Yellow
 AppearanceFlashGreen = Flashing Green
 
 ErrorTitle = Error
-Error1 = A Logix with this system name already exists.
-Error2 = Please change system name and try again.
-Error3 = A Logix with this user name already exists.
-Error4 = Please change user name and try again.
+Error1 = A Logix with this system name already exists.\nPlease change system name and try again.
+Error3 = A Logix with this user name already exists.\nPlease change user name and try again.
 Error5 = Cannot find a Logix with that system name.
-Error6 = New user name is already in use. Cannot update this Logix.
-Error7 = Too many Conditionals. Maximum number per Logix = "
-Error8 = Invalid system name, or system name not entered.
-Error9 = Please enter a valid Logix system name (e.g. IX3) and try again.
-Error10 = New user name is already in use. Cannot update this Conditional.
+Error6 = New user name is already in use. Cannot update this Logix.\nPlease change user name and try again.
+Error8 = Invalid system name, or system name not entered.\nPlease enter a valid Logix system name (e.g. IX3) and try again.
+Error10 = New user name is already in use. Cannot update this Conditional.\nPlease change user name and try again.
 Error11 = At least two Conditionals are needed to reorder Conditionals.
-Error12 = The name *
-Error13 = * does not match an existing turnout.
-Error14 = * does not match an existing signal head.
-Error15 = * does not match an existing sensor.
-Error16 = * does not match an existing light.
-Error17 = * does not match an existing memory.
-Error18 = * does not match an existing route.
+Error13 = The name "{0}" does not match an existing turnout.\nPlease correct or create as required, and try again.
+Error14 = The name "{0}" does not match an existing signal head.\nPlease correct or create as required, and try again.
+Error15 = The name "{0}" does not match an existing sensor.\nPlease correct or create as required, and try again.
+Error16 = The name "{0}" does not match an existing light.\nPlease correct or create as required, and try again.
+Error17 = The name "{0}" does not match an existing memory.\nPlease correct or create as required, and try again.
+Error18 = The name "{0}" does not match an existing route.\nPlease correct or create as required, and try again.
 Error19 = Please correct or create as required, and try again. 
-Error20 = * does not match an existing conditional.
+Error20 = The name "{0}" does not match an existing conditional.\nPlease enter a valid conditional system name, or the user name of a conditional in this logix.
 Error21 = Note: If you were editing in table, click in State column and try again.
-Error22 = * does not match an existing logix.
-Error23 = Invalid entry for number of seconds to wait for Delayed Set Sensor action - 
-Error24 = Please enter number of seconds (digits only), and try again.
-Error25 = Unreasonable or missing entry of time to wait for Delayed Set Sensor action -
-Error26 = Invalid time entry - 
-Error27 = - Time must be entereded in hh:mm format (e.g. 01:30, 16:00)
-Error28 = for a 24-hour clock. Please reenter in correct format, and try again. 
-Error29 = Please enter a valid conditional system name, or the user name of a conditional in this logix.
-Error30 = Duplicate user name error. Entered user name is already in use by Conditional
-Error31 = Please enter a different user name from others in this table.
-Error32 = Cannot edit two Logixs at the same time. Please complete edit of Logix *
-Error33 = * and try again.
-Error34 = Cannot edit two Conditionals at the same time. Please complete edit of Conditional *
-Error35 = Edit conditional in progress. Please complete edit of Conditional *
+Error22 = The name "{0}" does not match an existing logix.\nPlease correct or create as required, and try again.
+Error23 = Invalid entry for number of seconds to wait for Delayed Set Sensor action - {0}\nPlease enter number of seconds (digits only), and try again.
+Error25 = Unreasonable or missing entry of time to wait for Delayed Set Sensor action - {0}\nPlease enter number of seconds (digits only), and try again.
+Error26 = Invalid time entry "{0}"\nTime must be entered in hh:mm format (e.g. 01:30, 16:00)\nfor a 24-hour clock. Please reenter in correct format, and try again. 
+Error30 = Duplicate user name error. Entered user name is already in use by Conditional "{0}".\nPlease enter a different user name from others in this table.
+Error32 = Cannot edit two Logixs at the same time. Please complete edit of Logix "{0}" and try again.
+Error34 = Cannot edit two Conditionals at the same time. Please complete edit of Conditional "{0}" and try again.
+Error35 = Edit conditional in progress. Please complete edit of Conditional "{0}" and try again.
 
 WarnTitle = Warning
 Warn1 = The last Conditional has been deleted from this Logix.
 Warn2 = A Logix must have at least one Conditional to do anything useful.
-Warn3 = The last State Variable has been deleted from this Conditional.
-Warn4 = A Conditional must have at least one State Variable to do anything useful.
-Warn5 = The Conditional *
-Warn6 = * has no State Variables.
+Warn3 = The last State Variable has been deleted from this Conditional.\nA Conditional must have at least one State Variable to do anything useful.
+Warn5 = The Conditional "{0}" has no State Variables.\nA Conditional must have at least one State Variable to do anything useful.
