Add Triggers Calculation option to state variables of Conditionals of Logix, including check for inconsistencies, and warning if any found

--- a/jmri/jmrit/beantable/LogixTableBundle.properties
+++ b/jmri/jmrit/beantable/LogixTableBundle.properties
@@ -1,6 +1,6 @@
 # LogixTableBundle.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default properties for the jmri.jmrit.LogixTableAction GUI elements
 
@@ -22,6 +22,7 @@ ColumnLabelState = State
 ColumnLabelVariableType = Variable Type
 ColumnLabelData1 = Data 1
 ColumnLabelData2 = Data 2
+ColumnLabelTriggersCalculation = Triggers Calculation
 
 TitleAddLogix = Add Logix
 TitleEditLogix = Edit Logix
@@ -191,3 +192,8 @@ Warn1 = The last Conditional has been deleted from this Logix.
 Warn2 = A Logix must have at least one Conditional to do anything useful.
 Warn3 = The last State Variable has been deleted from this Conditional.\nA Conditional must have at least one State Variable to do anything useful.
 Warn5 = The Conditional "{0}" has no State Variables.\nA Conditional must have at least one State Variable to do anything useful.
+Warn6 = Warning - A change in the 
+Warn7 = of
+Warn8 = to or from
+Warn9 = will trigger calculation of this Logix.\nYou have Triggers Calculation checked for some occurances and unchecked for others.\n
+Warn10 = Please uncheck all occurances if you do not want calculation to be triggered by this change.
