--- a/jmri/jmrit/beantable/LogixTableBundle.properties
+++ b/jmri/jmrit/beantable/LogixTableBundle.properties
@@ -1,6 +1,6 @@
 # LogixTableBundle.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 #
 # Default properties for the jmri.jmrit.LogixTableAction GUI elements
 
@@ -192,8 +192,7 @@ Warn1 = The last Conditional has been deleted from this Logix.
 Warn2 = A Logix must have at least one Conditional to do anything useful.
 Warn3 = The last State Variable has been deleted from this Conditional.\nA Conditional must have at least one State Variable to do anything useful.
 Warn5 = The Conditional "{0}" has no State Variables.\nA Conditional must have at least one State Variable to do anything useful.
-Warn6 = Warning - A change in the 
-Warn7 = of
-Warn8 = to or from
-Warn9 = will trigger calculation of this Logix.\nYou have Triggers Calculation checked for some occurances and unchecked for others.\n
-Warn10 = Please uncheck all occurances if you do not want calculation to be triggered by this change.
+Warn6 = Warning - A change in the {0} of {1} {2} will trigger calculation of this Logix.\nYou have Triggers Calculation checked for some occurances and unchecked for others.\nPlease uncheck all occurances if you do not want calculation to be triggered by this change.
+# Warn7 is inserted as {2} in Warn6 when the item being warned about 
+# is a SignalHead, or otherwise has a specific value as part of the trigger.
+Warn7 = to or from {0}
