Fix lost-light-table bug and add None as a control choice in popup menu of Create/Edit light window

--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.18 $
+# Revision $Revision: 1.19 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
@@ -62,6 +62,7 @@ LightTimedSensor = Trigger Sensor Name
 LightTimedSensorHint = Enter name of Sensor triggering Timed ON
 LightTimedDurationOn = Duration ON (msec)
 LightTimedDurationOnHint = Enter duration of Timed ON in milliseconds
+LightNoneSelected = No Automated Control Selected
 LightControlBorder = Light Control
 LightCreateButtonHint = Press Create to create a new Light
 LightEditButtonHint = Press Edit to get data for an existing Light
@@ -72,6 +73,7 @@ LightSensorControl = By Sensor
 LightFastClockControl = By Fast Clock
 LightTurnoutStatusControl = By Turnout Status
 LightTimedOnControl = By Timed ON
+LightNoControl = None
 
 LightCreateInst = For a new Light, select or enter data, then press Create.
 LightEditInst = To Edit, enter System Name, then press Edit to show current data.
