add delete buttons

--- a/jmri/jmrit/beantable/BeanTableBundle.properties
+++ b/jmri/jmrit/beantable/BeanTableBundle.properties
@@ -1,6 +1,6 @@
 # BeanTableBundle.properties
 #
-# Revision $Revision: 1.19 $
+# Revision $Revision: 1.20 $
 #
 # Default properties for the jmri.jmrit.beantable GUI elements
 
@@ -21,14 +21,15 @@ ButtonCancel    = Cancel
 ButtonNo        = No
 ButtonYes       = Yes
 ButtonYesPlus   = Yes - Stop Warnings
+ButtonDelete    = Delete
+
 TitleAddSignal  = Add New Signal
 TitleAddSensor  = Add New Sensor
 TitleAddTurnout = Add New Turnout
 TitleAddReporter = Add New Reporter
-TitleAddMemory = Add New Memory
-TitleAddLight = Add/Edit Light
-LabelSystemName = System Name:
-LabelUserName   = User Name:
+TitleAddMemory  = Add New Memory
+TitleAddLight   = Add/Edit Light
+
 ColumnHeadEnabled = Enabled
 
 StringSE8c4aspect  = SE8c 4 aspect
@@ -36,6 +37,8 @@ StringTripleTurnout = Triple Turnout
 StringDoubleTurnout = Double Turnout
 StringVirtual = Virtual
 
+LabelSystemName = System Name:
+LabelUserName   = User Name:
 LabelTurnoutNumber = Turnout number:
 LabelGreenTurnoutNumber  = Green turnout number:
 LabelYellowTurnoutNumber = Yellow turnout number:
@@ -108,6 +111,9 @@ LightWarn9 = Warning: Light created, but duration entry had invalid format.
 Reminder1 = Please remember to save your Lights to disk.  (Select
 Reminder2 = 'Store Configuration...' in File menu of Light Table.)
 ReminderTitle = Reminder
+
+ReminderInUse = \"{0}\" was in use by {1} other objects.\nCheck for error messages when you next \nreload the configuration.
+
 WarningTitle = Warning
 
 TurnoutWarn1 = Warning - Requested Turnout 
