--- a/jmri/jmrit/JmritDebugBundle.properties
+++ b/jmri/jmrit/JmritDebugBundle.properties
@@ -1,6 +1,6 @@
 # JmritDebugBundle.properties
 #
-# Revision $Revision: 1.3 $
+# Revision $Revision: 1.4 $
 #
 # Default properties for the jmri.jmrit Debug menu
 
@@ -13,4 +13,4 @@ MenuItemCheckXMLFile            = Check XML File
 MenuItemValidateXMLFile         = Validate XML File
 MenuItemCheckDecoderNames       = Check Decoder Names
 MenuItemCheckProgrammerNames    = Check Programmer Names
-
+MenuItemLogAction               = Log Message
