--- a/jmri/jmrit/display/DisplayBundle.properties
+++ b/jmri/jmrit/display/DisplayBundle.properties
@@ -1,9 +1,10 @@
 # DisplayBundle.properties
 #
-# Revision $Revision: 1.6 $
+# Revision $Revision: 1.7 $
 #
 # Default properties for the jmrit.display package
 
+Title         = Panel Editor
 
 # menu items
 MenuPanels    = Panels
@@ -22,13 +23,23 @@ MenuItemScriptInput = Script Entry
 
 # labels, etc
 ButtonAddBkg        = Pick background image...
+ButtonSetName       = Set panel name
 ButtonAddText       = Add text:
 ButtonAddIcon       = Add icon:
 ButtonAddSensor     = Add sensor:
 ButtonAddRHTurnout  = Add right-hand turnout:
 ButtonAddLHTurnout  = Add left-hand turnout:
-ButtonAddSignal     = Add signal:
-ButtonAddFastClock  = Add Fast clock:
+ButtonAddSignal     = Add signal head:
+ButtonAddMemory     = Add memory:
+ButtonAddReporter   = Add reporter:
+ButtonAddMultiSensor = Add multi-sensor...
+ButtonAddFastClock  = Add fast clock
+ButtonChangeIcon    = Change icon...
+
+PromptNewName       = Enter new name:
+
+LabelX              = x:
+LabelY              = y:
 
 CheckBoxEditable    = Panel items popup menus active
 CheckBoxPositionable = Panel items can be repositioned
