--- a/scripts/build.xml
+++ b/scripts/build.xml
@@ -1,6 +1,6 @@
 <!-- Ant build.xml file for JMRI development -->
 <!-- Bob Jacobsen, Copyright 2002, 2003, 2004 -->
-<!-- Revision $Revision: 1.63 $ -->
+<!-- Revision $Revision: 1.64 $ -->
 
 <project name="JMRI" default="compile" basedir=".">
 <!-- basedir="." means all paths are relative to the "java" subdir -->
@@ -42,7 +42,7 @@
     <mkdir dir="${target}/resources" />
   </target>
 
-  <target name="clean" description="remove compilation results to force rebuild">
+  <target name="clean" depends="init" description="remove compilation results to force rebuild">
     <delete includeEmptyDirs="true">
       <fileset dir="classes"/>
     </delete>
@@ -61,7 +61,7 @@
     </copy>
   </target>
 
-  <target name="compile" depends="init, copyfiles" description="compile source, omitting tests">
+  <target name="compile" depends="init, copyfiles" description="compile main source with debugging off">
     <!-- Compile the java code from ${source} into ${target} -->
     <javac srcdir="${source}" 
            destdir="${target}"
@@ -72,7 +72,7 @@
     </javac>
   </target>
 
-  <target name="debug" depends="init, copyfiles" description="compile source with debugging on, omitting tests">
+  <target name="debug" depends="init, copyfiles" description="compile main source with debugging on">
     <!-- Compile the java code from ${source} into ${target} -->
     <javac srcdir="${source}" 
            destdir="${target}" 
@@ -91,7 +91,7 @@
     </rmic>
   </target>
 
-  <target name="tests" depends="debug" description="compile test classes">
+  <target name="tests" depends="debug" description="compile test classes with debug on">
     <!-- Compile the test java code from ${source} into ${target} -->
     <javac srcdir="${test}" 
            destdir="${target}"
@@ -102,7 +102,7 @@
     </javac>
   </target>
 
-  <target name="decoderpro" depends="compile" description="build and run DecoderPro app">
+  <target name="decoderpro" depends="debug" description="build and run DecoderPro app">
     <java classname="apps.DecoderPro.DecoderPro"
           dir=".." 
 	  fork="yes" >
@@ -117,7 +117,7 @@
     </java>
  </target>
 
-  <target name="panelpro" depends="compile" description="build and run PanelPro app">
+  <target name="panelpro" depends="debug" description="build and run PanelPro app">
     <java classname="apps.PanelPro.PanelPro"
           dir=".." 
 	  fork="yes" >
@@ -127,7 +127,7 @@
     </java>
  </target>
 
-  <target name="jmridemo" depends="compile" description="build and run JmriDemo app">
+  <target name="jmridemo" depends="debug" description="build and run JmriDemo app">
     <java classname="apps.JmriDemo.JMRIdemo"
           dir=".."
 	  fork="yes" >
@@ -137,7 +137,7 @@
     </java>
   </target>
 
-  <target name="locotools" depends="compile" description="build and run LocoTools app">
+  <target name="locotools" depends="debug" description="build and run LocoTools app">
     <java classname="apps.LocoTools.LocoTools"
           dir=".." 
 	  fork="yes" >
@@ -147,7 +147,7 @@
     </java>
  </target>
 
-  <target name="cornwall" depends="compile" description="build and run CornwallRR app">
+  <target name="cornwall" depends="debug" description="build and run CornwallRR app">
     <java classname="apps.cornwall.CornwallRR"
           dir=".." 
 	  fork="yes" >
@@ -157,7 +157,7 @@
     </java>
  </target>
 
-  <target name="local" depends="compile" description="build and run decoderpro from local config file">
+  <target name="local" depends="debug" description="build and run decoderpro from local config file">
     <java classname="apps.DecoderPro.DecoderPro"
           dir=".." 
 	  fork="yes" >
@@ -168,7 +168,7 @@
     </java>
  </target>
 
-  <target name="faceless" depends="compile" description="build and run faceless app">
+  <target name="faceless" depends="debug" description="build and run faceless app">
     <java classname="apps.FacelessApp"
           dir=".." 
 	  fork="yes" >
@@ -186,7 +186,7 @@
  </target>
 
 
-  <target name="profile" depends="compile" description="build and run JmriDemo app with profiling">
+  <target name="profile" depends="debug" description="build and run JmriDemo app with profiling">
     <java classname="apps.JmriDemo.JMRIdemo"
           dir=".."
 	  fork="yes" >
@@ -196,7 +196,7 @@
     </java>
   </target>
 
-  <target name="alltest" depends="compile, tests" description="build and run test suite">
+  <target name="alltest" depends="debug, tests" description="build and run test suite">
     <java classname="apps.tests.AllTest"
           dir=".." 
 	  fork="yes" >
@@ -206,7 +206,7 @@
   </target>
 
   <target name="jar" depends="compile, rmic"  
-          description="create working jar file with current contents">
+          description="create working jar file with current compiled contents">
     <jar jarfile="${jartarget}/jmri.jar" 
          basedir="${target}"
          manifest="manifest" 
@@ -258,7 +258,7 @@
 
  <!-- dist target forces the jar file to be built without test classes -->
  <target name="dist" depends="clean, init, compile, rmic, jar"
- 		 description="create a distribution jar file"/>
+ 		 description="create a distribution jar file without tests or debug info"/>
 
 
 </project>
