--- a/scripts/build.xml
+++ b/scripts/build.xml
@@ -1,6 +1,6 @@
 <!-- Ant build.xml file for JMRI development -->
-<!-- Bob Jacobsen, Copyright 2002, 2003, 2004 -->
-<!-- Revision $Revision: 1.64 $ -->
+<!-- Bob Jacobsen, Copyright 2002, 2003, 2004, 2007 -->
+<!-- Revision $Revision: 1.65 $ -->
 
 <project name="JMRI" default="compile" basedir=".">
 <!-- basedir="." means all paths are relative to the "java" subdir -->
@@ -195,6 +195,26 @@
        <jvmarg value="-Xrunhprof:cpu=samples,heap=sites,file=log.txt,depth=10" />
     </java>
   </target>
+
+    <target name="netbeans-profile" depends="debug" description="profile for DecoderPro for NetBeans">
+        <fail unless="netbeans.home">This target can only run inside the NetBeans IDE.</fail>
+        <nbprofiledirect>
+            <classpath refid="project.class.path"    />
+        </nbprofiledirect>
+   <java classname="apps.DecoderPro.DecoderPro"
+          dir=".." 
+	  fork="yes" >
+       <classpath refid="project.class.path"    />
+       <sysproperty key="java.security.policy" value="lib/security.policy"/> 
+       <sysproperty key="apple.laf.useScreenMenuBar" value="true"/> 
+       <jvmarg value="-Xms10m"/>
+       <jvmarg value="${profiler.info.jvmargs.agent}"/>
+       <!-- <jvmarg value="-Xmx60m"/> -->
+       <!-- <jvmarg value="-verbose"/> -->
+       <!-- <jvmarg value="-verbosegc"/> -->
+       <!-- <jvmarg value="-Xloggc:memory.vgc"/> --> <!-- for JTune -->
+    </java>
+ </target>
 
   <target name="alltest" depends="debug, tests" description="build and run test suite">
     <java classname="apps.tests.AllTest"
