added Abort button to allow transfers to be stopped

--- a/jmri/jmrix/loconet/downloader/Loader.properties
+++ b/jmri/jmrix/loconet/downloader/Loader.properties
@@ -1,6 +1,6 @@
 # Loader.properties
 #
-# Revision $Revision: 1.5 $
+# Revision $Revision: 1.6 $
 # Copyright 2005 Bob Jacobsen
 #
 #
@@ -14,24 +14,26 @@ ButtonSelect = Select
 ButtonRead = Read file
 ButtonLoad = Download
 ButtonVerify = Verify
+ButtonAbort = Abort
 
-LabelInpFile = Input file: 
+LabelInpFile = Input file:
 
-LabelBootload = Bootloader Version Number: 
+LabelBootload = Bootloader Version Number:
 
-LabelMfg = Manufacturer Number: 
-LabelDev = Developer Number: 
-LabelProduct = Product Code: 
-LabelHardware = Hardware Version Number: 
-LabelSoftware = Software Version Number: 
-LabelDelay = Delay (msec): 
-LabelEEStart = Start of EEPROM addresses (hex): 
+LabelMfg = Manufacturer Number:
+LabelDev = Developer Number:
+LabelProduct = Product Code:
+LabelHardware = Hardware Version Number:
+LabelSoftware = Software Version Number:
+LabelDelay = Delay (msec):
+LabelEEStart = Start of EEPROM addresses (hex):
 
 StatusSelectFile    = Click Select to pick the firmware file
 StatusReadFile      = Click Read to read the firmware file
 StatusDoDownload    = Click Download to download new firmware
 StatusDownloading   = Downloading!
 StatusVerifying     = Verifying!
+StatusAbort         = Operation Aborted
 StatusDone          = Operation Complete
 
 TipReadDisabled = Button disabled until you select an input file name
@@ -42,6 +44,9 @@ TipLoadEnabled = Click here to download to the product
 
 TipVerifyDisabled = Button disabled until you read a data file
 TipVerifyEnabled = Click here to verify product memory
+
+TipAbortDisabled = Button disabled until a download or verify operation
+TipAbortEnabled = Click here to abort a download or verify operation
 
 TipDisabledDownload = Button disabled during download
 
