D. Boudreau - add 'send macro' item

--- a/jmri/jmrix/JmrixSystemsBundle.properties
+++ b/jmri/jmrix/JmrixSystemsBundle.properties
@@ -1,6 +1,6 @@
 # JmritSystemsBundle.properties
 #
-# Revision $Revision: 1.10 $
+# Revision $Revision: 1.11 $
 #
 # Default properties for the jmri.jmrix Systems menu
 
@@ -28,3 +28,5 @@ MenuItemMRC = Model Rectifier Corp (MRC)
 MenuItemCommandMonitor = Command Monitor
 MenuItemSendCommand = Send Command
 MenuItemFirmwareUpdate = Firmware Update
+MenuItemMacroCommand = Send Macro
+
