Bug fix for Logix software

--- a/jmri/jmrit/beantable/LogixTableBundle.properties
+++ b/jmri/jmrit/beantable/LogixTableBundle.properties
@@ -1,6 +1,6 @@
 # LogixTableBundle.properties
 #
-# Revision $Revision: 1.5 $
+# Revision $Revision: 1.6 $
 #
 # Default properties for the jmri.jmrit.LogixTableAction GUI elements
 
@@ -29,8 +29,8 @@ TitleEditLogix = Edit Logix
 TitleEditConditional = Edit Conditional
 TitleLogicalExpression = Logical Expression
 TitleAction	= Actions
-ConditionalTableTitle = Conditionals ( in Order of Calculation )
-StateVariableTableTitle = State Variables
+ConditionalTableTitle = Conditionals ( in Order of Calculation, max
+StateVariableTableTitle = State Variables ( max 
 LogicalExpressionTitle = Logical Expression
 NotApplicableAbbreviation = N/A
 ActionTitle = Actions
@@ -186,6 +186,8 @@ Error30 = Duplicate user name error. Entered user name is already in use by Cond
 Error32 = Cannot edit two Logixs at the same time. Please complete edit of Logix "{0}" and try again.
 Error34 = Cannot edit two Conditionals at the same time. Please complete edit of Conditional "{0}" and try again.
 Error35 = Edit conditional in progress. Please complete edit of Conditional "{0}" and try again.
+Error36 = Sorry, cannot add more Conditionals to this Logix;\n it has the maximum allowed.
+Error37 = Sorry, cannot add more state variables to this conditional;\n it has the maximum allowed.
 
 WarnTitle = Warning
 Warn1 = The last Conditional has been deleted from this Logix.
