Reworded tools menu     Reworded LocoIO menu     Reworded tools menu     Slight updates WRT LocoIO debugging     Reworded LocoIO menu     Slight updates WRT LocoIO debugging   New: java/src/jmri/jmrix/loconet/locoio/README   New: java/src/jmri/jmrix/loconet/locoio/LocoIO.java   New: java/src/jmri/jmrix/loconet/locoio/LocoIOData.java   New: java/src/jmri/jmrix/loconet/locoio/LocoIOMode.java   New: java/src/jmri/jmrix/loconet/locoio/LocoIOModeList.java
    LocoIO programmer
    Now knows about LocoIO packets

--- a/jmri/jmrix/loconet/LocoNetBundle.properties
+++ b/jmri/jmrix/loconet/LocoNetBundle.properties
@@ -1,26 +1,26 @@
 # LocoNetBundle.properties
 #
-# Revision $Revision: 1.13 $
+# Revision $Revision: 1.14 $
 #
 # Default properties for the jmri.jmrix.loconet menu
 
 MenuLocoNet    = LocoNet
 
-MenuItemLocoNetMonitor      = LocoNet Monitor
-MenuItemSlotMonitor         = Slot Monitor
+MenuItemLocoNetMonitor      = Monitor LocoNet
+MenuItemSlotMonitor         = Monitor Slots
 MenuItemSendPacket          = Send LocoNet Packet
-MenuItemLocoIOProgrammer    = LocoIO Programmer
-MenuItemPM4Programmer       = PM4 Programmer
-MenuItemBDL16Programmer     = BDL16 Programmer
-MenuItemSE8cProgrammer      = SE8c Programmer
-MenuItemDS64Programmer      = DS64 Programmer
-MenuItemThrottleMessages    = Throttle Messages
-MenuItemClockMon            = Clock Monitor
+MenuItemLocoIOProgrammer    = Configure LocoIO
+MenuItemPM4Programmer       = Configure PM4
+MenuItemBDL16Programmer     = Configure BDL16
+MenuItemSE8cProgrammer      = Configure SE8c
+MenuItemDS64Programmer      = Configure DS64
+MenuItemThrottleMessages    = Send Throttle Messages
+MenuItemClockMon            = Monitor Clock
 MenuItemStartLocoNetServer  = Start LocoNet Server
-MenuItemLocoNetOverTCPServer = LocoNetOverTCP Server
-MenuItemLocoBufferStats     = LocoNet Stats Monitor
-MenuItemCmdStnConfig        = Command Station Programmer
+MenuItemLocoNetOverTCPServer = Start LocoNetOverTCP Server
+MenuItemLocoBufferStats     = Monitor LocoNet Stats
+MenuItemCmdStnConfig        = Configure Command Station
 MenuItemDownload            = Download Firmware
 MenuItemSoundload           = Download Sounds
 MenuItemSoundEditor         = Edit SPJ Sound File
-MenuItemSetID               = Set LocoNet ID
+MenuItemSetID               = Configure LocoNet ID
