--- a/jmri/jmrit/JmritToolsBundle.properties
+++ b/jmri/jmrit/JmritToolsBundle.properties
@@ -1,25 +1,25 @@
 # JmritToolsBundle.properties
 #
-# Revision $Revision: 1.15 $
+# Revision $Revision: 1.16 $
 #
 # Default properties for the jmri.jmrit Tools menu
 
 MenuTools    = Tools
 
 MenuItemSingleCVProgrammer = Single CV Programmer
-MenuItemDecoderProServiceProgrammer = DecoderPro Service Programmer
-MenuItemDecoderProOpsModeProgrammer = DecoderPro Ops-Mode Programmer
+MenuItemDecoderProServiceProgrammer = Service-Mode Programmer
+MenuItemDecoderProOpsModeProgrammer = Ops-Mode Programmer
 
-MenuItemTurnoutControl = Turnout Control
-MenuItemTurnoutTable = Turnout Table
-MenuItemSensorTable = Sensor Table
-MenuItemLightTable = Light Table
-MenuItemSignalTable = Signal Table
-MenuItemReporterTable = Reporter Table
-MenuItemMemoryTable = Memory Table
+MenuItemTurnoutControl = Turnout Control ...
+MenuItemTurnoutTable = Turnouts
+MenuItemSensorTable = Sensors
+MenuItemLightTable = Lights
+MenuItemSignalTable = Signals
+MenuItemReporterTable = Reporters
+MenuItemMemoryTable = Memory Variables
 MenuItemSimpleSignal = Simple Signal Logic
-MenuItemRouteTable = Route Table
-MenuItemLogixTable = Logix Table
+MenuItemRouteTable = Routes
+MenuItemLogixTable = Logix
 MenuItemSensorGroup = Sensor Groups...
 
 MenuThrottles = Throttles
@@ -28,15 +28,19 @@ MenuItemSaveThrottleLayout = Save Throttle Layout
 MenuItemLoadThrottleLayout = Load Throttle Layout
 MenuItemEditThrottlePreferences = Edit Throttle Preferences
 
-MenuItemPowerControl = Power Control
-MenuItemSpeedometer = Speedometer
+MenuItemPowerControl = Power Control ...
+MenuItemSpeedometer = Speedometer ...
 
-MenuItemConsistTool = Consisting Tool
+MenuItemConsistTool = Consisting Tool ...
 
-MenuItemSendDCCPacket = Send DCC packet
+MenuItemSendDCCPacket = Send DCC packet ...
 
 MenuClocks = Clocks
 MenuItemNixieClock = Nixie Clock
-MenuItemSetupClock = Setup Fast Clock
+MenuItemSetupClock = Setup Fast Clock ...
 MenuItemAnalogClock = Analog Clock
 
+
+MenuProgrammers=Programmers
+
+MenuTables=Tables
