--- a/java/.classpath
+++ b/java/.classpath
@@ -13,6 +13,7 @@
 	<classpathentry kind="lib" path="lib/junit.jar"/>
 	<classpathentry kind="lib" path="lib/jython.jar"/>
 	<classpathentry kind="lib" path="lib/MRJAdapter.jar"/>
+    <classpathentry kind="lib" path="lib/Serialio.jar"/>
 	<classpathentry kind="con" path="java/classes"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
