--- a/jmri/jmrit/JmritDebugBundle.properties
+++ b/jmri/jmrit/JmritDebugBundle.properties
@@ -1,6 +1,6 @@
 # JmritDebugBundle.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 #
 # Default properties for the jmri.jmrit Debug menu
 
@@ -14,3 +14,7 @@ MenuItemValidateXMLFile         = Validate XML File
 MenuItemCheckDecoderNames       = Check Decoder Names
 MenuItemCheckProgrammerNames    = Check Programmer Names
 MenuItemLogAction               = Log Message
+MenuItemLogixDisabled			= Load Logixs Disabled
+
+LogixDisabledMessage = As requested, when Logixs are loaded using the Panels menu, they will all be disabled.
+DebugOption                    = Debug Option
