--- a/jmri/jmrix/loconet/cmdstnconfig/DCS200options.properties
+++ b/jmri/jmrix/loconet/cmdstnconfig/DCS200options.properties
@@ -1,6 +1,6 @@
 # DCS200options.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 #
 # Default command station options for the DCS200
 
@@ -21,6 +21,7 @@ Reserved = Reserved
 
 HeadingText = Items describe effect on system operation when set "closed"
 
+Option2 = 2: Make DCS200 a booster only, not a command station
 Option3 = 3: Booster is autoreversing
 Option5 = 5: Command station master mode
 Option9 = 9: Allow Motorola trinary echo for 1-256
