--- a/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions.properties
+++ b/jmri/jmrix/loconet/cmdstnconfig/Defaultoptions.properties
@@ -1,6 +1,6 @@
 # Defaultoptions.properties
 #
-# Revision $Revision: 1.4 $
+# Revision $Revision: 1.5 $
 #
 # Default command station options for when the command
 # station isn't recognized.  These are the same as the Chief (DCS100)
@@ -22,6 +22,7 @@ Reserved = Reserved
 
 HeadingText = Items describe effect on system operation when set "closed"
 
+Option2 = 2: Set unit to be booster only, not command station
 Option3 = 3: Booster is autoreversing
 Option5 = 5: Command station master mode
 Option9 = 9: Allow Motorola trinary echo for 1-256
